# maku-to-do

./: README.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml
maku_todo/: celery_app.py  main.py
maku_todo/alembic/: env.py
maku_todo/alembic/versions/: 634af64cc807_create_users_and_todos.py  cfdf1e917ca2_create_users_tables.py
maku_todo/app/: app.py  db.py  exceptions.py  globalDependency.py  logging.py  models.py  router.py
maku_todo/app/components/auth/: controller.py  dependency.py  exceptions.py  models.py  repository.py  schemas.py  security.py  service.py
maku_todo/app/components/system/: controller.py  service.py
maku_todo/app/components/todo/: controller.py  models.py  repository.py  schemas.py  service.py
maku_todo/app/middleware/: logger.py
maku_todo/tasks/: email.py  sample.py
