[project]
name = "maku-to-do"
version = "0.1.0"
description = "a to-do app in FastAPI"
authors = [
    {name = "sachmannsingh-maku",email = "sachmann.singh@makunai.ai"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
]

[tool.poetry]
name = "maku-to-do"
packages = [{ include = "maku_todo" }]

[tool.poetry.scripts]
dev = "uvicorn maku_todo.main:app --reload"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
